
=== 1.2.0 (2018-03-02) ===
NEW: support for IPv4-mapped IPv6 addresses

=== 1.1.0 (2018-02-17) ===
FIXED: to work with frozen Object.prototype

=== 1.0.1 (2017-12-10) ===
FIXED: incorrect webpack dist config

=== 1.0.0 (2017-12-10) ===
Initial version