@@ -21,6 +21,7 @@ Key features:
 * Efficient prefix matching relying on JS Map implementation performance.
 * Dynamic ipset manipulation.
 * Associate any value for classification of match
+* Transparent IPv4-mapped IPv6 conversion to plain IPv4
 
 
 # Installation for Node.js
